add cores rules and bam for bowtie

--- a/fastq/homo_sapiens/Makefile
+++ b/fastq/homo_sapiens/Makefile
@@ -1,7 +1,28 @@
 #!/usr/bin/make -f
 
+# this is the env variable to tell us how many processors on this node
+# we get
+ifdef PBS_NUM_PPN
+CORES=$(PBS_NUM_PPN)
+else
+CORES=1
+endif
 
-bowtie_indexes: hg19.fa
+genes.fpkm_tracking: homo_sapiens_placenta.sorted.bam
+	module load cufflinks/2.2.1; \
+	cufflinks -p $(CORES) -G gencode.v19.annotation.gtf $<
+
+homo_sapiens_placenta.sorted.bam: homo_sapiens_placenta.bam
+	samtools sort $< -o $@ -T temp
+
+homo_sapiens_placenta.bam: 101116_lane_5_1.fastq 101116_lane_5_2.fastq homo_sapiens_hg19_bt2.1.bt2
+	module load bowtie2/2.1.0; \
+	module load samtools/1.0; \
+	bowtie2 -p $(CORES) -x $(wordlist 3,3,$^) \
+		-1 $(wordlist 1,1,$^) -2 $(wordlist 2,2,$^) | \
+		samtools view -b -o $@ -;
+
+homo_sapiens_hg19_bt2.1.bt2: hg19.fa
 	module load bowtie2/2.1.0; \
 	bowtie2-build $< homo_sapiens_hg19_bt2
 
