run patsubst on the homo sapiens index

--- a/fastq/homo_sapiens/Makefile
+++ b/fastq/homo_sapiens/Makefile
@@ -18,7 +18,7 @@ homo_sapiens_placenta.sorted.bam: homo_sapiens_placenta.bam
 homo_sapiens_placenta.bam: 101116_lane_5_1.fastq 101116_lane_5_2.fastq homo_sapiens_hg19_bt2.1.bt2
 	module load bowtie2/2.1.0; \
 	module load samtools/1.0; \
-	bowtie2 -p $(CORES) -x $(wordlist 3,3,$^) \
+	bowtie2 -p $(CORES) -x $(patsubst %.1.bt2,%,$(wordlist 3,3,$^)) \
 		-1 $(wordlist 1,1,$^) -2 $(wordlist 2,2,$^) | \
 		samtools view -b -o $@ -;
 
