--- a/data/Makefile
+++ b/data/Makefile
@@ -5,7 +5,7 @@ SHELL=/bin/bash
 R=R
 ROPTS=-q --no-save --no-restore-data
 
-FPKM_FILES=$(patsubst %.xlsx,%.txt,$(wildcard *_fpkm.xlsx))
+FPKM_FILES=Supplemental_Table_2_Homo_NEW_UPDATED.txt $(patsubst %.xlsx,%.txt,$(filter-out $(wildcard *Homo*), $(wildcard *_fpkm.xlsx)))
 
 
 all: $(FPKM_FILES)
@@ -14,21 +14,11 @@ all: $(FPKM_FILES)
 HOM_MouseHumanSequence.rpt: 
 	wget -O $@ "ftp://ftp.informatics.jax.org/pub/reports/HOM_MouseHumanSequence.rpt"
 
-combined_fpkm: combine_fpkm.R HOM_MouseHumanSequence.rpt $(FPKM_FILES)
-	$(R) $(ROPTS) -f $< --args $@ HOM_MouseHumanSequence.rpt $(FPKM_FILES)
+HOM_AllOrganism.rpt:
+	wget -O $@ "ftp://ftp.informatics.jax.org/pub/reports/HOM_AllOrganism.rpt"
 
-%.xls: %.gnumeric
-	$(SSCONVERT) --export-type Gnumeric_Excel:excel_dsf $< $@
-
-%.txt: %.gnumeric
-	$(SSCONVERT) --export-type Gnumeric_stf:stf_assistant -O 'separator="	" quote="" eol="unix"' $< $@
-
-%.txt: %.xls
-	$(SSCONVERT) --export-type Gnumeric_stf:stf_assistant -O 'separator="	" quote="" eol="unix"' $< $@
+combined_fpkm: combine_fpkm.R HOM_AllOrganism.rpt $(FPKM_FILES)
+	$(R) $(ROPTS) -f $< --args $@ $(wordlist 2,$(words $^),$^)
 
 %.txt: %.xlsx
 	$(SSCONVERT) --export-type Gnumeric_stf:stf_assistant -O 'separator="	" quote="" eol="unix"' $< $@
-
-%.xls: %.txt
-	txt2xls $< > $@
-
