--- a/fastq/armadillo/Makefile
+++ b/fastq/armadillo/Makefile
@@ -2,7 +2,7 @@
 
 SPECIES=dasypus_novemcinctus
 GTF=Dasypus_novemcinctus.Dasnov3.0.80.gtf
-FASTA=Dasypus_novemcinctus.Dasnov3.0.dna_rm.toplevel.fa
+FASTA=Dasypus_novemcinctus.Dasnov3.0.dna.toplevel.fa
 
 FASTQ_FILES=armadillo_placenta_R1410_GTGAAA_L007_R1_001.fastq.gz armadillo_placenta_R1410_GTGAAA_L007_R2_001.fastq.gz
 
