fix up the bonobo

--- a/fastq/baboon/Makefile
+++ b/fastq/baboon/Makefile
@@ -1,8 +1,12 @@
 #!/usr/bin/make -f
 
-SPECIES=papio_anubis
-GTF=Papio_anubis.PapAnu2.0.80.gtf
-FASTA=Papio_anubis.PapAnu2.0.dna.toplevel.fa
+## this is labelled as papio anubis, but teco is actually a Bonobo
+
+
+SPECIES=pan_paniscus
+ALIGNMENT_SPECIES=pan_troglodytes
+GTF=Pan_troglodytes.CHIMP2.1.4.80.gtf
+FASTA=Pan_troglodytes.CHIMP2.1.4.dna.toplevel.fa
 
 FASTQ_FILES=101116_lane_7_1.fastq 101116_lane_7_2.fastq
 
