compress fastq files

--- a/fastq/bos_taurus/Makefile
+++ b/fastq/bos_taurus/Makefile
@@ -4,6 +4,6 @@ SPECIES=bos_taurus
 GTF=Bos_taurus.UMD3.1.80.gtf
 FASTA=Bos_taurus.UMD3.1.dna.toplevel.fa
 
-FASTQ_FILES=091125_lane_6_1.fastq 091125_lane_6_2.fastq
+FASTQ_FILES=091125_lane_6_1.fastq.gz 091125_lane_6_2.fastq.gz
 
 include ../common_makefile
