--- a/fastq/canis_familiaris/Makefile
+++ b/fastq/canis_familiaris/Makefile
@@ -4,6 +4,6 @@ SPECIES=canis_familiaris
 GTF=Canis_familiaris.CanFam3.1.80.gtf
 FASTA=Canis_familiaris.CanFam3.1.dna.toplevel.fa
 
-FASTQ_FILES=101116_lane_8_1.fastq 101116_lane_8_2.fastq
+FASTQ_FILES=101116_lane_8_1.fastq.gz 101116_lane_8_2.fastq.gz
 
 include ../common_makefile
