--- a/fastq/elephant/Makefile
+++ b/fastq/elephant/Makefile
@@ -4,6 +4,6 @@ SPECIES=loxodonta_africana
 GTF=Loxodonta_africana.loxAfr3.80.gtf
 FASTA=Loxodonta_africana.loxAfr3.dna.toplevel.fa
 
-FASTQ_FILES=091125_lane_5_1.fastq  091125_lane_5_2.fastq
+FASTQ_FILES=091125_lane_5_1.fastq.gz  091125_lane_5_2.fastq.gz
 
 include ../common_makefile
