--- a/fastq/homo_sapiens/Makefile
+++ b/fastq/homo_sapiens/Makefile
@@ -4,7 +4,7 @@ SPECIES=homo_sapiens
 GTF=Homo_sapiens.GRCh38.80.gtf
 FASTA=Homo_sapiens.GRCh38.dna.toplevel.fa
 
-FASTQ_FILES=101116_lane_5_1.fastq 101116_lane_5_2.fastq
+FASTQ_FILES=101116_lane_5_1.fastq.gz 101116_lane_5_2.fastq.gz
 
 include ../common_makefile
 
