--- a/fastq/mouse/Makefile
+++ b/fastq/mouse/Makefile
@@ -4,6 +4,6 @@ SPECIES=mus_musculus
 GTF=Mus_musculus.GRCm38.80.gtf
 FASTA=Mus_musculus.GRCm38.dna.toplevel.fa
 
-FASTQ_FILES=101116_lane_6_1.fastq  101116_lane_6_2.fastq
+FASTQ_FILES=101116_lane_6_1.fastq.gz  101116_lane_6_2.fastq.gz
 
 include ../common_makefile
