--- a/fastq/bonobo/Makefile
+++ b/fastq/bonobo/Makefile
@@ -8,7 +8,7 @@ ALIGNMENT_SPECIES=pan_troglodytes
 GTF=Pan_troglodytes.CHIMP2.1.4.80.gtf
 FASTA=Pan_troglodytes.CHIMP2.1.4.dna.toplevel.fa
 
-FASTQ_FILES=101116_lane_7_1.fastq 101116_lane_7_2.fastq
+FASTQ_FILES=101116_lane_7_1.fastq.gz 101116_lane_7_2.fastq.gz
 
 
 include ../common_makefile
