--- a/fastq/opossum/Makefile
+++ b/fastq/opossum/Makefile
@@ -4,6 +4,6 @@ SPECIES=monodelphis_domestica
 GTF=Monodelphis_domestica.BROADO5.80.gtf.gz
 FASTA=Monodelphis_domestica.BROADO5.dna.toplevel.fa
 
-FASTQ_FILES=091125_lane_7_1.fastq  091125_lane_7_2.fastq
+FASTQ_FILES=091125_lane_7_1.fastq.gz  091125_lane_7_2.fastq.gz
 
 include ../common_makefile
