--- a/fastq/opossum/Makefile
+++ b/fastq/opossum/Makefile
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 SPECIES=monodelphis_domestica
-GTF=Monodelphis_domestica.BROADO5.80.gtf.gz
+GTF=Monodelphis_domestica.BROADO5.80.gtf
 FASTA=Monodelphis_domestica.BROADO5.dna.toplevel.fa
 
 FASTQ_FILES=091125_lane_7_1.fastq.gz  091125_lane_7_2.fastq.gz
