include ensembl orthologs in the combined file

--- a/data/Makefile
+++ b/data/Makefile
@@ -49,7 +49,7 @@ oma-ensembl.txt: oma-ensembl.txt.gz
 oma-groups_long.txt: oma-group-to-long.pl oma-groups.txt oma-ensembl.txt
 	$(PERL) $^ > $@
 
-combined_fpkm: combine_fpkm.R HOM_AllOrganism.rpt oma-groups_long.txt fastq_fpkm/combined_fpkms
+combined_fpkm: combine_fpkm.R HOM_AllOrganism.rpt oma-groups_long.txt fastq_fpkm/combined_fpkms ensembl_orthologs
 	$(R) $(ROPTS) -f $< --args $@ $(wordlist 2,$(words $^),$^)
 
 homology_table: homology_table.R combined_fpkm
