add parse_tree; update .gitignore

--- a/data/.gitignore
+++ b/data/.gitignore
@@ -8,3 +8,7 @@ HOM_AllOrganism.rpt
 HOM_MouseHumanSequence.rpt
 oma-ensembl.txt.gz
 oma-groups.txt.gz
+Compara.80.protein.nhx.emf.gz
+gene_trees
+ensembl_orthologs
+homology_table
