add heatmap of genes by functional grouping plot

--- a/figures/heatmap_gene_by_functional_grouping/Makefile
+++ b/figures/heatmap_gene_by_functional_grouping/Makefile
@@ -6,9 +6,13 @@ R=R
 ROPTS=-q --no-save --no-restore-data
 
 
-all: go_functional_grouping
+all: go_functional_grouping heatmap_gene_by_functional_grouping.pdf
 
 
 go_functional_grouping: get_functional_grouping.R ../../data/combined_fpkm
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
+heatmap_gene_by_functional_grouping.pdf: heatmap_gene_by_functional_grouping_plot.R \
+	../../data/combined_fpkm \
+	go_functional_grouping
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
