use Mus musculus for spalax

--- a/fastq/spalax_carmeli/Makefile
+++ b/fastq/spalax_carmeli/Makefile
@@ -1,5 +1,10 @@
 #!/usr/bin/make -f
 
+SPECIES=spalax_carmeli
+ALIGNMENT_SPECIES=mus_musculus
+GTF=Mus_musculus.GRCm38.80.gtf
+FASTA=Mus_musculus.GRCm38.dna.toplevel.fa
+
 COMMON_MAKEFILE=../common_makefile
 
 include ../srr_makefile
