fix the location of the mouse gtf and fasta files

--- a/fastq/spalax_carmeli/Makefile
+++ b/fastq/spalax_carmeli/Makefile
@@ -2,8 +2,9 @@
 
 SPECIES=spalax_carmeli
 ALIGNMENT_SPECIES=mus_musculus
-GTF=Mus_musculus.GRCm38.80.gtf
-FASTA=Mus_musculus.GRCm38.dna.toplevel.fa
+GTF=../mouse/Mus_musculus.GRCm38.80.gtf
+FASTA=../mouse/Mus_musculus.GRCm38.dna.toplevel.fa
+BOWTIE_INDEX_DIR=../mouse/
 
 COMMON_MAKEFILE=../common_makefile
 
