--- a/fastq/ateles_fusciceps/Makefile
+++ b/fastq/ateles_fusciceps/Makefile
@@ -2,8 +2,8 @@
 
 SPECIES=ateles_fusciceps
 ALIGNMENT_SPECIES=callithrix_jacchus
-GTF=Callithrix_jacchus.C_jacchus3.2.1.80.gtf.gz
-FASTA=Callithrix_jacchus.C_jacchus3.2.1.dna.toplevel.fa.gz
+GTF=Callithrix_jacchus.C_jacchus3.2.1.80.gtf
+FASTA=Callithrix_jacchus.C_jacchus3.2.1.dna.toplevel.fa
 
 FASTQ_FILES=R223_L4_1.fastq.gz R223_L4_2.fastq.gz
 
