--- a/fastq/spalax_carmeli/Makefile
+++ b/fastq/spalax_carmeli/Makefile
@@ -1,11 +1,14 @@
 #!/usr/bin/make -f
 
 SPECIES=spalax_carmeli
-ALIGNMENT_SPECIES=mus_musculus
-GTF=../mouse/Mus_musculus.GRCm38.80.gtf
-FASTA=../mouse/Mus_musculus.GRCm38.dna.toplevel.fa
-BOWTIE_INDEX_DIR=../mouse/
+ALIGNMENT_SPECIES=nannospalax_galili
+GTF=../nannospalax_galili/nannospalax_galili.gtf
+FASTA=../nannospalax_galili/nannospalax_galili.toplevel.fa
+BOWTIE_INDEX_DIR=../nannospalax_galili/
 
 COMMON_MAKEFILE=../common_makefile
+
+# this is not an ensembl assembly
+NOTENSEMBL=1
 
 include ../srr_makefile
