change how the nannospalax gtf is built to avoid issues on biocluster

--- a/fastq/nannospalax_galili/Makefile
+++ b/fastq/nannospalax_galili/Makefile
@@ -14,18 +14,26 @@ include ../srr_makefile
 
 # get the fasta files; the perl regex is to just keep the ref name
 # which is used in the gtf file
-nannospalax_galili.toplevel.fa:
+1026970_ref_S.galili_v1.0_chrUn.fa.gz: 
 	rsync -avP \
-	"rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/CHR_Un/1026970_ref_S.galili_v1.0_chrUn.fa.gz" \
-	"rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/CHR_MT/1026970_ref_S.galili_v1.0_chrMT.fa.gz" \
-	.
-	gzip -dc 1026970_ref_S.galili_v1.0_chrMT.fa.gz 1026970_ref_S.galili_v1.0_chrUn.fa.gz | \
+	"rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/CHR_Un/$@" $@
+1026970_ref_S.galili_v1.0_chrMT.fa.gz:
+	rsync -avP \
+	"rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/CHR_MT/$@" $@ 
+
+nannospalax_galili.toplevel.fa: 1026970_ref_S.galili_v1.0_chrUn.fa.gz \
+	1026970_ref_S.galili_v1.0_chrUn.fa.gz
+	gzip -dc $^ | \
 		perl -pe 's/^>gi\|\d+\|ref\|([^\|]+)\|.+/>$$1/; $$_;' > \
 		$@
+ref_S.galili_v1.0_top_level.gff3.gz:
+	rsync -avP "rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/GFF/$@" $@
+
+ref_S.galili_v1.0_top_level.gff3: ref_S.galili_v1.0_top_level.gff3.gz
+	gzip -dc $< > $@
 
 # build the gtf file from the gff3 file
-nannospalax_galili.gtf: nannospalax_galili.toplevel.fa
-	rsync -avP "rsync://ftp.ncbi.nih.gov/genomes/Nannospalax_galili/GFF/ref_S.galili_v1.0_top_level.gff3.gz" .
-	gzip -dc ref_S.galili_v1.0_top_level.gff3.gz > ref_S.galili_v1.0_top_level.gff3
+nannospalax_galili.gtf: nannospalax_galili.toplevel.fa \
+	ref_S.galili_v1.0_top_level.gff3
 	$(MODULE) load cufflinks/2.2.1; \
-	gffread -o nannospalax_galili.gtf -T -g nannospalax_galili.toplevel.fa ref_S.galili_v1.0_top_level.gff3
+	gffread -o $@ -T -g $< $(wordlist 2,2,$^)
