add rules for trinity alignment and start of annotation using blastx against a protein reference

--- a/fastq/ateles_fusciceps/Makefile
+++ b/fastq/ateles_fusciceps/Makefile
@@ -6,6 +6,9 @@ GTF=Callithrix_jacchus.C_jacchus3.2.1.80.gtf
 FASTA=Callithrix_jacchus.C_jacchus3.2.1.dna.toplevel.fa
 
 FASTQ_FILES=R223_L4_1.fastq.gz R223_L4_2.fastq.gz
+USE_TRINITY=1
+PROTEIN_ALIGNMENT_SPECIES=homo_sapiens
+PROTEIN_ALIGNMENT_FASTA=Homo_sapiens.GRCh38.pep.all.fa
 
 include ../common_makefile
 
