use trinity and mouse for spalax

--- a/fastq/spalax_carmeli/Makefile
+++ b/fastq/spalax_carmeli/Makefile
@@ -11,4 +11,9 @@ COMMON_MAKEFILE=../common_makefile
 # this is not an ensembl assembly
 NOTENSEMBL=1
 
+# we'll need to use trinity to do the alignment
+USE_TRINITY=1
+PROTEIN_ALIGNMENT_SPECIES=mus_musculus
+PROTEIN_ALIGNMENT_FASTA=Mus_musculus.GRCm38.pep.all.fa
+
 include ../srr_makefile
