remake the hormone plot with correct ordering

--- a/figures/hormone_genes/Makefile
+++ b/figures/hormone_genes/Makefile
@@ -7,6 +7,8 @@ ROPTS=-q --no-save --no-restore-data
 
 all: hormone_gene_expression.pdf
 
-hormone_gene_expression.pdf: hormone_genes.R ../../data/combined_fpkm ../../data/go_gene_association
+hormone_gene_expression.pdf: hormone_genes.R \
+	../../data/combined_fpkm ../../data/go_gene_association \
+	../species_ordering.R
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
