--- a/figures/hormone_genes/Makefile
+++ b/figures/hormone_genes/Makefile
@@ -12,3 +12,8 @@ hormone_gene_expression.pdf: hormone_genes.R \
 	../species_ordering.R
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
+hormone_gene_expression_multipage.pdf: hormone_genes.R \
+	../../data/combined_fpkm ../../data/go_gene_association \
+	../species_ordering.R
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
+
