include star logfiles

--- a/data/fastq_fpkm/Makefile
+++ b/data/fastq_fpkm/Makefile
@@ -6,7 +6,7 @@ ROPTS=-q --no-save --no-restore-data
 
 GENE_FPKM_FILES=$(wildcard *_genes.fpkm_tracking)
 ISOFORM_FPKM_FILES=$(wildcard *_isoforms.fpkm_tracking)
-
+STAR_LOG_FILES=$(wildcard *_log_star.txt)
 
 SPECIES_WITH_TRINITY_ALIGNMENTS=nannospalax_galili spalax_carmeli ateles_fusciceps
 # 
@@ -15,11 +15,13 @@ SPECIES_WITH_TRINITY_ALIGNMENTS=nannospalax_galili spalax_carmeli ateles_fuscice
 # TRINITY_RSEM_FILES=$(patsubst %,%_trinity_align_rsem_isoforms.txt,$(SPECIES_WITH_TRINITY_ALIGNMENTS))
 TRINITY_DIAMOND_FILES=$(patsubst %,%_trinity_diamond.txt,$(SPECIES_WITH_TRINITY_ALIGNMENTS))
 
+
 all: combined_fpkms
 
 combined_fpkms: combine_fpkms.R protein_id_to_gene_id.txt \
 	$(GENE_FPKM_FILES) $(ISOFORM_FPKM_FILES) \
-	$(TRINITY_DIAMOND_FILES)
+	$(TRINITY_DIAMOND_FILES) \
+	$(STAR_LOG_FILES)
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
 protein_id_to_gene_id.txt: protein_to_gene.pl \
