--- a/fastq/homo_sapiens/Makefile
+++ b/fastq/homo_sapiens/Makefile
@@ -54,6 +54,7 @@ make_srr_dirs:
 			ln ../../srr_makefile Makefile -sf; \
 			echo "SRR=$$a" > srr_num.mk; \
 			echo "GTF=../$(GTF)" >> srr_num.mk; \
+			echo "TRIMMOMATIC_QUALITY=-phred33" >> srr_num.mk; \
 			echo "SPECIES=$(SPECIES)" >> srr_num.mk; \
 			echo "FASTA=../$(FASTA)" >> srr_num.mk; \
 		); \
