update .gitignore for supplemental material

--- a/manuscript/.gitignore
+++ b/manuscript/.gitignore
@@ -1,18 +1,20 @@
 
 auto
 figure
-manuscript.aux
-manuscript.bbl
-manuscript.bcf
-manuscript.blg
-manuscript.fdb_latexmk
-manuscript.fls
-manuscript.log
-manuscript.out
-manuscript.pdf
-manuscript.run.xml
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.log
+*.out
+*.pdf
+*.run.xml
+*.rip
 manuscript.tex
+supplemental_material.tex
 cache
-manuscript.lof
-manuscript.lot
-manuscript.toc
+*.lof
+*.lot
+*.toc
