only remove duplicated fpkms if we're not doing per-sample

--- a/data/Makefile
+++ b/data/Makefile
@@ -52,6 +52,9 @@ oma-groups_long.txt: oma-group-to-long.pl oma-groups.txt oma-ensembl.txt
 combined_fpkm: combine_fpkm.R HOM_AllOrganism.rpt oma-groups_long.txt fastq_fpkm/combined_fpkms ensembl_orthologs
 	$(R) $(ROPTS) -f $< --args $@ $(wordlist 2,$(words $^),$^)
 
+combined_fpkm_per_sample: combine_fpkm.R HOM_AllOrganism.rpt oma-groups_long.txt fastq_fpkm/combined_fpkms ensembl_orthologs
+	$(R) $(ROPTS) -f $< --args $@ $(wordlist 2,$(words $^),$^)
+
 homology_table: homology_table.R combined_fpkm
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
