include hugo nomenclature for full gene names

--- a/data/Makefile
+++ b/data/Makefile
@@ -12,6 +12,12 @@ FPKM_FILES=Supplemental_Table_2_Homo_NEW_UPDATED.txt $(patsubst %.xlsx,%.txt,$(f
 
 all: combined_fpkm
 
+hugo_nomenclature.txt:
+	wget -O $@ "http://www.genenames.org/cgi-bin/download?col=gd_hgnc_id&col=gd_app_sym&col=gd_app_name&col=gd_status&col=gd_prev_sym&col=gd_aliases&col=gd_pub_chrom_map&col=gd_pub_acc_ids&col=gd_pub_refseq_ids&col=md_ensembl_id&status=Approved&status=Entry+Withdrawn&status_opt=2&where=&order_by=gd_app_sym_sort&format=text&limit=&hgnc_dbtag=on&submit=submit"
+
+hugo_nomenclature: hugo_nomenclature.R hugo_nomenclature.txt
+	$(MODULE) load R/3.2.0; \
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
 go_gene_association.txt: go_gene_association.pl go-basic.obo gene_association.goa_human
 	$(PERL) $^ |grep -v '^!' > $@
