--- a/data/Makefile
+++ b/data/Makefile
@@ -108,3 +108,7 @@ placenta_go_results_mf: go_analysis.R placenta_core_transcriptome
 
 placenta_go_results_bp: go_analysis.R placenta_core_transcriptome
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,2,$^) placenta.transcriptome.list BP $@
+
+
+ortholog_expression_matrix.txt: ortholog_expression_matrix.R combined_fpkm
+	$(R) $(ROPTS) -f $< --args $(wordlist 2,2,$^) $@
