switch to top 1% instead of top 5%

--- a/go_annotation/Makefile
+++ b/go_annotation/Makefile
@@ -6,14 +6,13 @@ R=R
 ROPTS=-q --no-save --no-restore-data
 PERL?=perl
 
-all: $(GO_ANALYSES)
+all: go_tissue_analysis
 
 # include species.mk
 
 # species.mk: species_list.R combined_fpkm
 # 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
 
-GO_ANALYSES=$(patsubst %,go_%_mf,$(SPECIES)) $(patsubst %,go_%_bp,$(SPECIES))
 
 go_tissue_analysis: go_tissue_analysis.R combined_fpkm housekeeping_genes_superset
 	$(R) $(ROPTS) -f $< --args $(wordlist 2,$(words $^),$^) $@
